# OriginDL

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CODE_STYLE.md  MILESTONES.md  README.md  TODO.md  build.sh  code_style.md  cplusplusStyle.md  format.py  gitcommit_template  run_benchmark.py  run_unit_test.sh  setEnv.sh  test_host_device  test_host_device.cpp
data/: README.md
src/mat/origin/cuda/: CMakeLists.txt  add.cu  add_scalar.cu  broadcast_to.cu  cublas_algo.cu  cuda_broadcast.cu  cuda_kernels.cu  cuda_ops.cu  cuda_utils.cpp  cuda_utils.cu  device_validation.cu  divide.cu  exp.cu  factory.cu  log.cu  mat_mul.cu  multiply.cu  multiply_scalar.cu  negate.cu  pow.cu  reshape.cu  sqrt.cu  square.cu  stream_manager.cu  subtract.cu  sum.cu  sum_to.cu  transpose.cu  type_conversion.cu
src/mat/origin/cuda/activation/: leaky_relu.cu  relu.cu  sigmoid.cu  silu.cu
src/mat/origin/cuda/conv/: adaptive_avg_pool2d.cu  avg_pool2d.cu  conv2d.cu  cudnn_wrapper.cpp  max_pool2d.cu
src/mat/origin/cuda/custom/: yolo_detect.cu
src/mat/origin/cuda/math/: add.cu  broadcast_to.cu  cat.cu  compare.cu  cublas_wrapper.cpp  divide.cu  exp.cu  gt.cu  log.cu  mat_mul.cu  max.cu  multiply.cu  negate.cu  pow.cu  relu.cu  sqrt.cu  square.cu  subtract.cu  sum.cu  sum_to.cu  transpose.cu
tests/3rd/googletest/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt
tests/benchmark/activation/: bench_relu.cpp  bench_relu.py  bench_sigmoid.cpp  bench_sigmoid.py  bench_silu.cpp  bench_silu.py  bench_softmax.cpp  bench_softmax.py
tests/benchmark/add/: bench_add.cpp  bench_add.py
tests/benchmark/common/: __init__.py  benchmark_framework.cpp  benchmark_framework.h  benchmark_framework.py  parser_utils.h  parser_utils.py  timer.h  timer.py
tests/benchmark/conv/: bench_conv2d.cpp
tests/benchmark/conv2d/: bench_conv2d.py
tests/benchmark/custom/: bench_linear.cpp  bench_linear.py
tests/benchmark/loss/: bench_softmax_cross_entropy.cpp  bench_softmax_cross_entropy.py
tests/benchmark/math/: bench_add.cpp  bench_add.py  bench_div.cpp  bench_div.py  bench_exp.cpp  bench_exp.py  bench_log.cpp  bench_log.py  bench_mat_mul.cpp  bench_mat_mul.py  bench_mul.cpp  bench_mul.py  bench_neg.cpp  bench_neg.py  bench_pow.cpp  bench_pow.py  bench_square.cpp  bench_square.py  bench_sub.cpp  bench_sub.py  bench_sum.cpp  bench_sum.py
tests/benchmark/matmul/: bench_matmul.cpp  bench_matmul.py
tests/benchmark/nn/: bench_dropout.cpp  bench_dropout.py  bench_identity.cpp  bench_identity.py  bench_upsample.cpp  bench_upsample.py
tests/benchmark/normalization/: bench_batch_norm.cpp  bench_batch_norm.py
tests/benchmark/pooling/: bench_adaptive_avg_pool2d.cpp  bench_adaptive_avg_pool2d.py  bench_avg_pool2d.cpp  bench_avg_pool2d.py  bench_max_pool2d.cpp  bench_max_pool2d.py
tests/benchmark/shape/: bench_cat.cpp  bench_cat.py  bench_flatten.cpp  bench_flatten.py  bench_reshape.cpp  bench_reshape.py  bench_transpose.cpp  bench_transpose.py
tests/common/: CMakeLists.txt  device_test_base.h  gtest_utils.cpp  gtest_utils.h  test_utils.cpp  test_utils.h
tests/common/log/: CMakeLists.txt  log.cpp
tests/example/linear_regression/: CMakeLists.txt  linear_regression.cpp  nn_linear.cpp  nn_linear_cuda.cpp
tests/example/mnist/: CMakeLists.txt  conv_mnist.cpp  mlp_mnist.cpp  mnist.cpp  pytorch_mnist.py
tests/example/pnnx/: CMakeLists.txt  class_labels.h  resnet_test.cpp  yolov5_test.cpp
tests/example/resnet/: CMakeLists.txt  resnet_infer.cpp
tests/example/tensor/: CMakeLists.txt  tensor.cpp  tensor_cuda.cpp  tensor_cuda_debug.cpp  tensor_cuda_extended.cpp  tensor_cuda_minimal.cpp  tensor_cuda_simple.cpp  tensor_print.cpp
tests/unit_test/: CMakeLists.txt
tests/unit_test/autograd/: test_linear_regression.cpp
tests/unit_test/common/: device_test_base.h  gtest_utils.cpp  gtest_utils.h  test_utils.cpp  test_utils.h
tests/unit_test/core/: test_no_grad.cpp
tests/unit_test/data/: test_dataloader.cpp  test_dataset.cpp
tests/unit_test/io/: test_checkpoint.cpp
tests/unit_test/nn/: test_batch_norm.cpp  test_conv2d_layer.cpp  test_dropout.cpp  test_embedding.cpp  test_mlp.cpp  test_rms_norm.cpp
tests/unit_test/operator/: test_adaptive_avg_pool2d.cpp  test_add.cpp  test_avg_pool2d.cpp  test_batch_norm.cpp  test_broadcast_to.cpp  test_cat.cpp  test_compare.cpp  test_conv2d.cpp  test_conv2d_transpose_output.cpp  test_div.cpp  test_exp.cpp  test_flatten.cpp  test_leaky_relu.cpp  test_linear.cpp  test_log.cpp  test_matmul.cpp  test_matmul_3d.cpp  test_max_pool2d.cpp  test_mul.cpp  test_neg.cpp  test_pow.cpp  test_relu.cpp  test_reshape.cpp  test_sigmoid.cpp  test_silu.cpp  test_softmax.cpp  test_softmax_cross_entropy.cpp  test_split.cpp  test_square.cpp  test_sub.cpp  test_sum.cpp  test_sum_to.cpp  test_transpose.cpp  test_type_promotion.cpp  test_upsample.cpp  test_yolo_detect.cpp
tests/unit_test/operator/pytorch_comparison/: CMakeLists.txt  README.md  origindl_matmul_example.cpp  origindl_reshape_example.cpp  origindl_sum_example.cpp  origindl_transpose_example.cpp  pytorch_matmul_example.py  pytorch_reshape_example.py  pytorch_sum_example.py  pytorch_transpose_example.py  run_comparison.sh
tests/unit_test/optim/: test_adam.cpp  test_weight_decay.cpp
tests/unit_test/tensor/: test_create_tensor.cpp  test_multi_type_tensor.cpp  test_tensor_attributes.cpp  test_tensor_index.cpp  test_tensor_operations.cpp  test_tensor_options.cpp
tests/unit_test/tesnor/: test_create_tensor.cpp
tests/unit_test/utils/: test_accuracy.cpp
tests/unit_test_cuda/: CMakeLists.txt  README.md
tests/unit_test_cuda/autograd/: test_cuda_linear_regression.cpp
tests/unit_test_cuda/operator/: test_cuda_add.cpp  test_cuda_broadcast_to.cpp  test_cuda_div.cpp  test_cuda_exp.cpp  test_cuda_matmul.cpp  test_cuda_mul.cpp  test_cuda_neg.cpp  test_cuda_pow.cpp  test_cuda_reshape.cpp  test_cuda_square.cpp  test_cuda_sub.cpp  test_cuda_sum.cpp  test_cuda_sum_to.cpp  test_cuda_transpose.cpp
tests/unit_test_cuda/tensor/: test_cuda_create_tensor.cpp  test_cuda_multi_type_tensor.cpp  test_cuda_tensor.cpp  test_cuda_tensor_options.cpp
(+477 files in other folders)
